--- a/sj/stack_ queue.ipynb
+++ b/sj/stack_ queue.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
       "text/plain": "5"
      },
      "metadata": {},
-     "execution_count": 72
+     "execution_count": 245
     }
    ],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -146,12 +146,98 @@
       "text/plain": "[4, 3, 1, 1, 0]"
      },
      "metadata": {},
-     "execution_count": 86
+     "execution_count": 254
     }
    ],
    "source": [
     "prices = [1, 2, 3, 2, 3]\n",
     "solution(prices)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "stack 활용해서 해보기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[]\n첫번째\n[2]\n[3, 2, 3]\n두번째\n[2, 3]\n[2, 3]\n"
+    }
+   ],
+   "source": [
+    "prices = [1, 2, 3, 2, 3]\n",
+    "time_stack = []\n",
+    "now = prices.pop(0)\n",
+    "print(time_stack)\n",
+    "\n",
+    "next = prices[0]\n",
+    "if now < next :\n",
+    "    time_stack.append(prices.pop(0))\n",
+    "print('첫번째')\n",
+    "print(time_stack)\n",
+    "print(prices)\n",
+    "\n",
+    "next = prices[0]\n",
+    "if now < next :\n",
+    "    time_stack.append(prices.pop(0))\n",
+    "print('두번째')\n",
+    "print(time_stack)\n",
+    "print(prices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 340,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[2, 3, 2, 3]\n[3, 2, 3]\n[]\n"
+    },
+    {
+     "output_type": "error",
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-340-abb277fb88b7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mnow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprices\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mprices\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mtime_stack\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "prices = [1, 2, 3, 2, 3]\n",
+    "answer = []\n",
+    "\n",
+    "for i in range(0,5):\n",
+    "    now = prices[0]\n",
+    "    prices.pop(0)\n",
+    "    time_stack = []\n",
+    "    while prices :\n",
+    "        next = prices[0]\n",
+    "        if now <= next :\n",
+    "            time_stack.append(prices.pop(0))\n",
+    "            prices = time_stack\n",
+    "        else :\n",
+    "            break\n",
+    "            prices = \n",
+    "    answer.append(len(time_stack))\n",
+    "\n",
+    "    print(prices)"
    ]
   },
   {
@@ -321,11 +407,120 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. 다리를 지나는 트럭"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bridge_length = 2\n",
+    "weight = 10\n",
+    "truck_weights = [7,4,5,6]\n",
+    "#return = 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "cross: [[7, 2]]\nleft: [4, 5, 6]\n경과시간: 2\n"
+    }
+   ],
+   "source": [
+    "bridge_length = 2\n",
+    "weight = 10\n",
+    "truck_weights = [7,4,5,6]\n",
+    "\n",
+    "# 1초 돌때마다 다리 위에 트럭 올리기\n",
+    "sec=0\n",
+    "place=1\n",
+    "cross = []\n",
+    "cross.append([truck_weights.pop(0),place])\n",
+    "sec+=1\n",
+    "cross[0] = [cross[0][0], cross[0][1]+1]\n",
+    "sec+=1\n",
+    "print('cross:',cross)\n",
+    "print('left:', truck_weights)\n",
+    "print('경과시간:', sec)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not tuple",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-219-fedd636bb301>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcross\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+     ]
+    }
+   ],
+   "source": [
+    "cross"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "cross: [7]\nleft: [4, 5, 6]\n경과시간: 2\n"
+    }
+   ],
+   "source": [
+    "bridge_length = 2\n",
+    "weight = 10\n",
+    "truck_weights = [7,4,5,6]\n",
+    "\n",
+    "sec=0\n",
+    "cross = []\n",
+    "cross.append(truck_weights.pop(0))\n",
+    "for i in range(1, len(truck_weights)):\n",
+    "    # cross에 있는 무게가 10이 넘지 않는다는 조건 넣기\n",
+    "    if cross[0] + truck_weights[0] < 10 :\n",
+    "        cross.append(truck_weights.pop(0))\n",
+    "        sec += 1\n",
+    "    else :\n",
+    "        sec += 1\n",
+    "print('cross:',cross)\n",
+    "print('left:', truck_weights)\n",
+    "print('경과시간:', sec)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 다리에서 내려간 트럭이 원래 트럭 수보다 작을때까지 진행\n",
+    "done = []\n",
+    "while len(done) < len(truck_weights):\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "code",
