--- a/sj/stack_ queue.ipynb
+++ b/sj/stack_ queue.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -375,9 +375,7 @@
     "        if not day:\n",
     "            answer.append(len(stack))\n",
     "\n",
-    "    return answer\n",
-    "\n",
-    "\n"
+    "    return answer\n"
    ]
   },
   {
@@ -410,24 +408,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. 다리를 지나는 트럭"
+    "### 3. 다리를 지나는 트럭  \n",
+    "2020-12-07"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bridge_length = 2\n",
-    "weight = 10\n",
-    "truck_weights = [7,4,5,6]\n",
-    "#return = 8"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 198,
    "metadata": {
     "tags": []
    },
@@ -435,51 +422,31 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "cross: [[7, 2]]\nleft: [4, 5, 6]\n경과시간: 2\n"
+     "text": "[[1, 0], [2, 0]]\n"
     }
    ],
    "source": [
     "bridge_length = 2\n",
     "weight = 10\n",
     "truck_weights = [7,4,5,6]\n",
+    "#return = 8\n",
     "\n",
-    "# 1초 돌때마다 다리 위에 트럭 올리기\n",
-    "sec=0\n",
-    "place=1\n",
-    "cross = []\n",
-    "cross.append([truck_weights.pop(0),place])\n",
-    "sec+=1\n",
-    "cross[0] = [cross[0][0], cross[0][1]+1]\n",
-    "sec+=1\n",
-    "print('cross:',cross)\n",
-    "print('left:', truck_weights)\n",
-    "print('경과시간:', sec)\n"
+    "# 1초 지날 때, 다리 위에 무게 조건 확인 후 트럭 올리기\n",
+    "sec = 0\n",
+    "bridge = [[1,0], [2,0]]\n",
+    "\n",
+    "# bridge[0].append(10)\n",
+    "# bridge[1].append(13)\n",
+    "# bridge[1][1] + bridge[0][1]\n",
+    "# t = bridge[0].pop()\n",
+    "# print(bridge)\n",
+    "# print(t)\n",
+    "print(bridge)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not tuple",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-219-fedd636bb301>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcross\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
-     ]
-    }
-   ],
-   "source": [
-    "cross"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 199,
    "metadata": {
     "tags": []
    },
@@ -487,47 +454,273 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "cross: [7]\nleft: [4, 5, 6]\n경과시간: 2\n"
+     "text": "8 sec\n[[1, 6], [2, 0]]\n[]\n"
     }
    ],
    "source": [
-    "bridge_length = 2\n",
-    "weight = 10\n",
-    "truck_weights = [7,4,5,6]\n",
+    "while truck_weights:\n",
     "\n",
-    "sec=0\n",
-    "cross = []\n",
-    "cross.append(truck_weights.pop(0))\n",
-    "for i in range(1, len(truck_weights)):\n",
-    "    # cross에 있는 무게가 10이 넘지 않는다는 조건 넣기\n",
-    "    if cross[0] + truck_weights[0] < 10 :\n",
-    "        cross.append(truck_weights.pop(0))\n",
-    "        sec += 1\n",
-    "    else :\n",
-    "        sec += 1\n",
-    "print('cross:',cross)\n",
-    "print('left:', truck_weights)\n",
-    "print('경과시간:', sec)\n"
+    "    sec += 1\n",
+    "    bridge[1][1] = bridge[0].pop()\n",
+    "    bridge[0].append(0)\n",
+    "\n",
+    "    next_truck = truck_weights[0]\n",
+    "\n",
+    "    if bridge[0][1] + bridge[1][1] + next_truck < weight :\n",
+    "        bridge[0][1] = truck_weights.pop(0)\n",
+    "    \n",
+    "    if not truck_weights :\n",
+    "        sec += bridge_length\n",
+    "\n",
+    "\n",
+    "print(sec, 'sec')\n",
+    "print(bridge)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 다리에서 내려간 트럭이 원래 트럭 수보다 작을때까지 진행\n",
-    "done = []\n",
-    "while len(done) < len(truck_weights):\n",
-    "    \n"
+    "def solution(bridge_length, weight, truck_weights):\n",
+    "    sec = 0\n",
+    "    bridge = [[i,0] for i in range(bridge_length)]\n",
+    "\n",
+    "    while truck_weights:\n",
+    "\n",
+    "        sec += 1\n",
+    "        bridge[1][1] = bridge[0].pop()\n",
+    "        bridge[0].append(0)\n",
+    "\n",
+    "        next_truck = truck_weights[0]\n",
+    "\n",
+    "        if bridge[0][1] + bridge[1][1] + next_truck < weight :\n",
+    "            bridge[0][1] = truck_weights.pop(0)\n",
+    "        \n",
+    "        if not truck_weights :\n",
+    "            sec += bridge_length\n",
+    "\n",
+    "    return sec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 226,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "8\n101\n110\n"
+    }
+   ],
+   "source": [
+    "print(solution(2, 10, [7,4,5,6]))\n",
+    "print(solution(100,100,[10]))\n",
+    "print(solution(100,100,[10,10,10,10,10,10,10,10,10,10]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 4. 프린터  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "(0, 1)\n(1, 5)\n(2, 7)\n(3, 33)\n(4, 39)\n(5, 52)\n"
+    }
+   ],
+   "source": [
+    "# enumerate 개념 알기\n",
+    "# :몇번째인지 알 수 있음 (인덱스 개념)\n",
+    "t = [1, 5, 7, 33, 39, 52]\n",
+    "for p in enmerate(t):\n",
+    "     print(p)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "index : 0, value: 1\nindex : 1, value: 5\nindex : 2, value: 7\nindex : 3, value: 33\nindex : 4, value: 39\nindex : 5, value: 52\n"
+    }
+   ],
+   "source": [
+    "# value 값만 뽑아내어 볼 수 있음\n",
+    "for i, v in enumerate(t):\n",
+    "     print(\"index : {}, value: {}\".format(i,v))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[[2, 1], [3, 3], [4, 2], [1, 2]]\n[]\n[[3, 3], [4, 2], [1, 2], [2, 1]]\n[]\n[[4, 2], [1, 2], [2, 1]]\n[[3, 3]]\n[[1, 2], [2, 1]]\n[[3, 3], [4, 2]]\n[[2, 1]]\n[[3, 3], [4, 2], [1, 2]]\n[]\n[]\n[[3, 3], [4, 2], [1, 2], [2, 1]]\n"
+    }
+   ],
+   "source": [
+    "priorities = [2, 1, 3, 2]\n",
+    "location = 2\n",
+    "# return = 1\n",
+    "print_list = []\n",
+    "_priorities = [[i+1, v] for i, v in enumerate(priorities)]\n",
+    "\n",
+    "this_turn = _priorities.pop(0)\n",
+    "list_left = [item[1] for item in _priorities]\n",
+    "\n",
+    "if this_turn[1] < max(list_left):\n",
+    "    _priorities.append(this_turn)\n",
+    "elif this_turn[1] >= max(list_left):\n",
+    "    print_list.append(this_turn)\n",
+    "\n",
+    "print(_priorities)\n",
+    "print(print_list)\n",
+    "\n",
+    "\n",
+    "this_turn = _priorities.pop(0)\n",
+    "list_left = [item[1] for item in _priorities]\n",
+    "\n",
+    "if this_turn[1] < max(list_left):\n",
+    "    _priorities.append(this_turn)\n",
+    "elif this_turn[1] >= max(list_left):\n",
+    "    print_list.append(this_turn)\n",
+    "\n",
+    "print(_priorities)\n",
+    "print(print_list)\n",
+    "\n",
+    "this_turn = _priorities.pop(0)\n",
+    "list_left = [item[1] for item in _priorities]\n",
+    "\n",
+    "if this_turn[1] < max(list_left):\n",
+    "    _priorities.append(this_turn)\n",
+    "elif this_turn[1] >= max(list_left):\n",
+    "    print_list.append(this_turn)\n",
+    "\n",
+    "print(_priorities)\n",
+    "print(print_list)\n",
+    "\n",
+    "this_turn = _priorities.pop(0)\n",
+    "list_left = [item[1] for item in _priorities]\n",
+    "\n",
+    "if this_turn[1] < max(list_left):\n",
+    "    _priorities.append(this_turn)\n",
+    "elif this_turn[1] >= max(list_left):\n",
+    "    print_list.append(this_turn)\n",
+    "\n",
+    "print(_priorities)\n",
+    "print(print_list)\n",
+    "\n",
+    "this_turn = _priorities.pop(0)\n",
+    "list_left = [item[1] for item in _priorities]\n",
+    "\n",
+    "if this_turn[1] < max(list_left):\n",
+    "    _priorities.append(this_turn)\n",
+    "elif this_turn[1] >= max(list_left):\n",
+    "    print_list.append(this_turn)\n",
+    "\n",
+    "print(_priorities)\n",
+    "print(print_list)\n",
+    "\n",
+    "\n",
+    "this_turn = _priorities.pop(0)\n",
+    "print(_priorities)\n",
+    "list_left = [item[1] for item in _priorities]\n",
+    "\n",
+    "if not _priorities :\n",
+    "        print_list.append(this_turn)\n",
+    "print(_priorities)\n",
+    "print(print_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "1"
+     },
+     "metadata": {},
+     "execution_count": 121
+    }
+   ],
+   "source": [
+    "priorities = [2, 1, 3, 2]\n",
+    "location = 2\n",
+    "# return = 1\n",
+    "\n",
+    "def solution(priorities, location):\n",
+    "    print_list = []\n",
+    "    _priorities = [[i+1, v] for i, v in enumerate(priorities)]\n",
+    "\n",
+    "    while _priorities :\n",
+    "        this_turn = _priorities.pop(0)\n",
+    "        list_left = [item[1] for item in _priorities]\n",
+    "\n",
+    "        if len(list_left) > 0 :\n",
+    "        \n",
+    "            if this_turn[1] < max(list_left):\n",
+    "                _priorities.append(this_turn)\n",
+    "            else :\n",
+    "                print_list.append(this_turn)\n",
+    "        else :\n",
+    "            print_list.append(this_turn)\n",
+    "\n",
+    "\n",
+    "    answer = [[i+1, e][0] for i, e in enumerate(print_list) if e[0] == location + 1][0]\n",
+    "\n",
+    "    return answer\n",
+    "\n",
+    "# 테스트 1 〉\t통과 (0.52ms, 10.2MB)\n",
+    "# 테스트 2 〉\t통과 (2.41ms, 10.2MB)\n",
+    "# 테스트 3 〉\t통과 (1.68ms, 10.2MB)\n",
+    "# 테스트 4 〉\t통과 (0.39ms, 10.2MB)\n",
+    "# 테스트 5 〉\t통과 (0.01ms, 10.1MB)\n",
+    "# 테스트 6 〉\t통과 (0.34ms, 10.2MB)\n",
+    "# 테스트 7 〉\t통과 (0.68ms, 10.2MB)\n",
+    "# 테스트 8 〉\t통과 (1.72ms, 10.2MB)\n",
+    "# 테스트 9 〉\t통과 (0.06ms, 10.2MB)\n",
+    "# 테스트 10 〉\t통과 (0.36ms, 10.2MB)\n",
+    "# 테스트 11 〉\t통과 (1.40ms, 10.2MB)\n",
+    "# 테스트 12 〉\t통과 (0.47ms, 10.2MB)\n",
+    "# 테스트 13 〉\t통과 (1.27ms, 10.2MB)\n",
+    "# 테스트 14 〉\t통과 (0.01ms, 10.3MB)\n",
+    "# 테스트 15 〉\t통과 (0.18ms, 10.2MB)\n",
+    "# 테스트 16 〉\t통과 (0.13ms, 10.2MB)\n",
+    "# 테스트 17 〉\t통과 (2.04ms, 10.1MB)\n",
+    "# 테스트 18 〉\t통과 (0.04ms, 10.2MB)\n",
+    "# 테스트 19 〉\t통과 (1.76ms, 10.1MB)\n",
+    "# 테스트 20 〉\t통과 (1.06ms, 10.2MB)\n"
+   ]
   }
  ],
  "metadata": {
