[mod] Q3, Q4 코드 정리

--- a/sj/stack_ queue.ipynb
+++ b/sj/stack_ queue.ipynb
@@ -197,25 +197,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "[2, 3, 2, 3]\n[3, 2, 3]\n[]\n"
-    },
-    {
      "output_type": "error",
-     "ename": "IndexError",
-     "evalue": "list index out of range",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-d4e864bfc871>, line 15)",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-340-abb277fb88b7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mnow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprices\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mprices\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mtime_stack\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-d4e864bfc871>\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    prices =\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -414,39 +406,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 24,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "[[1, 0], [2, 0]]\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bridge_length = 2\n",
     "weight = 10\n",
     "truck_weights = [7,4,5,6]\n",
-    "#return = 8\n",
-    "\n",
-    "# 1초 지날 때, 다리 위에 무게 조건 확인 후 트럭 올리기\n",
-    "sec = 0\n",
-    "bridge = [[1,0], [2,0]]\n",
-    "\n",
-    "# bridge[0].append(10)\n",
-    "# bridge[1].append(13)\n",
-    "# bridge[1][1] + bridge[0][1]\n",
-    "# t = bridge[0].pop()\n",
-    "# print(bridge)\n",
-    "# print(t)\n",
-    "print(bridge)"
+    "#return = 8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
@@ -454,32 +428,31 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "8 sec\n[[1, 6], [2, 0]]\n[]\n"
+     "text": "# 1: [[0, 0], [1, 0]]\n# 2: [[0], [1, 0]]\n# 3: [[0, 0], [1, 0]]\n# next truck:  7\n# 다리 위의 무게:  7\n# 4: [[0, 7], [1, 0]]\n# 남은 트럭:  [4, 5, 6]\n"
     }
    ],
    "source": [
-    "while truck_weights:\n",
+    "sec = 0\n",
+    "bridge = [[i,0] for i in range(bridge_length)]\n",
     "\n",
-    "    sec += 1\n",
-    "    bridge[1][1] = bridge[0].pop()\n",
-    "    bridge[0].append(0)\n",
+    "print('# 1:', bridge)\n",
+    "bridge[0].pop()\n",
+    "print('# 2:', bridge)\n",
+    "bridge[0].append(0)\n",
+    "print('# 3:', bridge)\n",
     "\n",
-    "    next_truck = truck_weights[0]\n",
+    "next_truck = truck_weights[0]\n",
+    "print('# next truck: ', next_truck )\n",
     "\n",
-    "    if bridge[0][1] + bridge[1][1] + next_truck < weight :\n",
-    "        bridge[0][1] = truck_weights.pop(0)\n",
-    "    \n",
-    "    if not truck_weights :\n",
-    "        sec += bridge_length\n",
-    "\n",
-    "\n",
-    "print(sec, 'sec')\n",
-    "print(bridge)"
+    "print('# 다리 위의 무게: ', bridge[0][1] + bridge[1][1] + next_truck)\n",
+    "bridge[0][1] = truck_weights.pop(0)\n",
+    "print('# 4:', bridge)\n",
+    "print('# 남은 트럭: ', truck_weights)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,6 +497,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[[0, 0], [1, 0], [2, 0]]\n[[0, 0], [1, 0], [2, 0]]\n[[0, 0], [1, 0], [2, 0]]\n"
+    }
+   ],
+   "source": [
+    "# print(solution(3, 1, [1, 1, 1]))\n",
+    "truck_weights = [1, 1, 1]\n",
+    "sec = 0\n",
+    "bridge = [[i,0] for i in range(3)]\n",
+    "print(bridge)\n",
+    "\n",
+    "sec = 1\n",
+    "bridge[1][1] = bridge[0].pop()\n",
+    "\n",
+    "bridge[0].append(0)\n",
+    "print(bridge)\n",
+    "\n",
+    "next_truck = truck_weights[0]\n",
+    "next_truck\n",
+    "\n",
+    "if bridge[0][1] + bridge[1][1] + next_truck < 1 :\n",
+    "    bridge[0][1] = truck_weights.pop(0)\n",
+    "\n",
+    "if not truck_weights :\n",
+    "    sec += bridge_length\n",
+    "\n",
+    "sec = 2\n",
+    "bridge[1][1] = bridge[0].pop()\n",
+    "\n",
+    "bridge[0].append(0)\n",
+    "\n",
+    "next_truck = truck_weights[0]\n",
+    "\n",
+    "if bridge[0][1] + bridge[1][1] + next_truck < 1 :\n",
+    "    bridge[0][1] = truck_weights.pop(0)\n",
+    "\n",
+    "if not truck_weights :\n",
+    "    sec += bridge_length\n",
+    "\n",
+    "print(bridge)\n",
+    "# while truck_weights:\n",
+    "\n",
+    "#     sec += 1\n",
+    "#     bridge[1][1] = bridge[0].pop()\n",
+    "#     bridge[0].append(0)\n",
+    "\n",
+    "#     next_truck = truck_weights[0]\n",
+    "\n",
+    "#     if bridge[0][1] + bridge[1][1] + next_truck < weight :\n",
+    "#         bridge[0][1] = truck_weights.pop(0)\n",
+    "    \n",
+    "#     if not truck_weights :\n",
+    "#         sec += bridge_length"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -548,7 +585,7 @@
     "# :몇번째인지 알 수 있음 (인덱스 개념)\n",
     "t = [1, 5, 7, 33, 39, 52]\n",
     "for p in enmerate(t):\n",
-    "     print(p)\n"
+    "     print(p)"
    ]
   },
   {
@@ -572,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 31,
    "metadata": {
     "tags": []
    },
@@ -580,7 +617,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[[2, 1], [3, 3], [4, 2], [1, 2]]\n[]\n[[3, 3], [4, 2], [1, 2], [2, 1]]\n[]\n[[4, 2], [1, 2], [2, 1]]\n[[3, 3]]\n[[1, 2], [2, 1]]\n[[3, 3], [4, 2]]\n[[2, 1]]\n[[3, 3], [4, 2], [1, 2]]\n[]\n[]\n[[3, 3], [4, 2], [1, 2], [2, 1]]\n"
+     "text": "# 비교 인쇄물 []\n# 인쇄물 리스트:  [[1, 2], [2, 1], [3, 3], [4, 2]]\n# 최종 인쇄물 순서: []\n-----------------------------\n# 이번 인쇄물 [1, 2]\n# 비교 인쇄물 [1, 3, 2]\n# 인쇄물 리스트:  [[2, 1], [3, 3], [4, 2], [1, 2]]\n# 최종 인쇄물 순서: []\n-----------------------------\n# 이번 인쇄물 [2, 1]\n# 비교 인쇄물 [3, 2, 2]\n# 인쇄물 리스트:  [[3, 3], [4, 2], [1, 2], [2, 1]]\n# 최종 인쇄물 순서: []\n-----------------------------\n# 이번 인쇄물 [3, 3]\n# 비교 인쇄물 [2, 2, 1]\n# 인쇄물 리스트:  [[4, 2], [1, 2], [2, 1]]\n# 최종 인쇄물 순서: [[3, 3]]\n-----------------------------\n# 이번 인쇄물 [4, 2]\n# 비교 인쇄물 [2, 1]\n# 인쇄물 리스트:  [[1, 2], [2, 1]]\n# 최종 인쇄물 순서: [[3, 3], [4, 2]]\n-----------------------------\n# 이번 인쇄물 [1, 2]\n# 비교 인쇄물 [1]\n# 인쇄물 리스트:  [[2, 1]]\n# 최종 인쇄물 순서: [[3, 3], [4, 2], [1, 2]]\n-----------------------------\n# 이번 인쇄물 [2, 1]\n# 비교 인쇄물 [1]\n# 인쇄물 리스트:  []\n# 최종 인쇄물 순서: [[3, 3], [4, 2], [1, 2]]\n-----------------------------\n# 이번 인쇄물 [2, 1]\n# 비교 인쇄물 []\n# 인쇄물 리스트:  []\n# 최종 인쇄물 순서: [[3, 3], [4, 2], [1, 2], [2, 1]]\n"
     }
    ],
    "source": [
@@ -590,6 +627,13 @@
     "print_list = []\n",
     "_priorities = [[i+1, v] for i, v in enumerate(priorities)]\n",
     "\n",
+    "print('# 비교 인쇄물', list_left)\n",
+    "print('# 인쇄물 리스트: ',_priorities)\n",
+    "print('# 최종 인쇄물 순서:', print_list)\n",
+    "print('-----------------------------')\n",
+    "\n",
+    "\n",
+    "# 이번에 확인할 인쇄물\n",
     "this_turn = _priorities.pop(0)\n",
     "list_left = [item[1] for item in _priorities]\n",
     "\n",
@@ -598,31 +642,11 @@
     "elif this_turn[1] >= max(list_left):\n",
     "    print_list.append(this_turn)\n",
     "\n",
-    "print(_priorities)\n",
-    "print(print_list)\n",
-    "\n",
-    "\n",
-    "this_turn = _priorities.pop(0)\n",
-    "list_left = [item[1] for item in _priorities]\n",
-    "\n",
-    "if this_turn[1] < max(list_left):\n",
-    "    _priorities.append(this_turn)\n",
-    "elif this_turn[1] >= max(list_left):\n",
-    "    print_list.append(this_turn)\n",
-    "\n",
-    "print(_priorities)\n",
-    "print(print_list)\n",
-    "\n",
-    "this_turn = _priorities.pop(0)\n",
-    "list_left = [item[1] for item in _priorities]\n",
-    "\n",
-    "if this_turn[1] < max(list_left):\n",
-    "    _priorities.append(this_turn)\n",
-    "elif this_turn[1] >= max(list_left):\n",
-    "    print_list.append(this_turn)\n",
-    "\n",
-    "print(_priorities)\n",
-    "print(print_list)\n",
+    "print('# 이번 인쇄물', this_turn)\n",
+    "print('# 비교 인쇄물', list_left)\n",
+    "print('# 인쇄물 리스트: ',_priorities)\n",
+    "print('# 최종 인쇄물 순서:', print_list)\n",
+    "print('-----------------------------')\n",
     "\n",
     "this_turn = _priorities.pop(0)\n",
     "list_left = [item[1] for item in _priorities]\n",
@@ -632,8 +656,11 @@
     "elif this_turn[1] >= max(list_left):\n",
     "    print_list.append(this_turn)\n",
     "\n",
-    "print(_priorities)\n",
-    "print(print_list)\n",
+    "print('# 이번 인쇄물', this_turn)\n",
+    "print('# 비교 인쇄물', list_left)\n",
+    "print('# 인쇄물 리스트: ',_priorities)\n",
+    "print('# 최종 인쇄물 순서:', print_list)\n",
+    "print('-----------------------------')\n",
     "\n",
     "this_turn = _priorities.pop(0)\n",
     "list_left = [item[1] for item in _priorities]\n",
@@ -643,18 +670,56 @@
     "elif this_turn[1] >= max(list_left):\n",
     "    print_list.append(this_turn)\n",
     "\n",
-    "print(_priorities)\n",
-    "print(print_list)\n",
-    "\n",
+    "print('# 이번 인쇄물', this_turn)\n",
+    "print('# 비교 인쇄물', list_left)\n",
+    "print('# 인쇄물 리스트: ',_priorities)\n",
+    "print('# 최종 인쇄물 순서:', print_list)\n",
+    "print('-----------------------------')\n",
     "\n",
     "this_turn = _priorities.pop(0)\n",
-    "print(_priorities)\n",
+    "list_left = [item[1] for item in _priorities]\n",
+    "\n",
+    "if this_turn[1] < max(list_left):\n",
+    "    _priorities.append(this_turn)\n",
+    "elif this_turn[1] >= max(list_left):\n",
+    "    print_list.append(this_turn)\n",
+    "\n",
+    "print('# 이번 인쇄물', this_turn)\n",
+    "print('# 비교 인쇄물', list_left)\n",
+    "print('# 인쇄물 리스트: ',_priorities)\n",
+    "print('# 최종 인쇄물 순서:', print_list)\n",
+    "print('-----------------------------')\n",
+    "\n",
+    "this_turn = _priorities.pop(0)\n",
+    "list_left = [item[1] for item in _priorities]\n",
+    "\n",
+    "if this_turn[1] < max(list_left):\n",
+    "    _priorities.append(this_turn)\n",
+    "elif this_turn[1] >= max(list_left):\n",
+    "    print_list.append(this_turn)\n",
+    "\n",
+    "print('# 이번 인쇄물', this_turn)\n",
+    "print('# 비교 인쇄물', list_left)\n",
+    "print('# 인쇄물 리스트: ',_priorities)\n",
+    "print('# 최종 인쇄물 순서:', print_list)\n",
+    "print('-----------------------------')\n",
+    "\n",
+    "this_turn = _priorities.pop(0)\n",
+    "print('# 이번 인쇄물', this_turn)\n",
+    "print('# 비교 인쇄물', list_left)\n",
+    "print('# 인쇄물 리스트: ',_priorities)\n",
+    "print('# 최종 인쇄물 순서:', print_list)\n",
+    "print('-----------------------------')\n",
+    "\n",
     "list_left = [item[1] for item in _priorities]\n",
     "\n",
     "if not _priorities :\n",
     "        print_list.append(this_turn)\n",
-    "print(_priorities)\n",
-    "print(print_list)"
+    "\n",
+    "print('# 이번 인쇄물', this_turn)\n",
+    "print('# 비교 인쇄물', list_left)\n",
+    "print('# 인쇄물 리스트: ',_priorities)\n",
+    "print('# 최종 인쇄물 순서:', print_list)"
    ]
   },
   {
@@ -688,6 +753,7 @@
     "\n",
     "        if len(list_left) > 0 :\n",
     "        \n",
+    "            # 남은 \n",
     "            if this_turn[1] < max(list_left):\n",
     "                _priorities.append(this_turn)\n",
     "            else :\n",
