[mod] decorator, NotImplementedError()

--- a/sj/20201211_study.ipynb
+++ b/sj/20201211_study.ipynb
@@ -2,23 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": "usage: ipykernel_launcher [-h] [--start_date START_DATE]\nipykernel_launcher: error: unrecognized arguments: --ip=127.0.0.1 --stdin=9043 --control=9041 --hb=9040 --Session.signature_scheme=\"hmac-sha256\" --Session.key=b\"38e4a45f-9333-4ab1-ae1e-2bc500944f17\" --shell=9042 --transport=\"tcp\" --iopub=9044 --f=/var/folders/jn/r2fpnth12ss4378dhm2gxbyc0000gn/T/tmp-43656gtk8mmzQ1iN1.json\n"
+    },
+    {
+     "output_type": "error",
+     "ename": "SystemExit",
+     "evalue": "2",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 2\n"
+     ]
+    }
+   ],
    "source": [
     "# argparse\n",
     "import argparse\n",
     "parser = argparse.ArgumentParser()\n",
-    "\n",
     "parser.add_argument('--start_date', type=str, default=None)\n",
-    "\n",
     "args = parser.parse_args()\n",
     "start_date = args.start_date"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### contextDecorator  \n",
+    "https://docs.python.org/3/library/contextlib.html"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
@@ -52,7 +75,7 @@
     "def function():\n",
     "    print('The bit in the middle')\n",
     "\n",
-    "function()\n"
+    "function()"
    ]
   },
   {
@@ -74,11 +97,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 오류 발생시키기  \n",
+    ": class 종속 관계에서 함수 지정을 반드시 해야 하도록 강제할 때 사용\n",
+    "\n",
+    "https://wikidocs.net/30  \n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Train :\n",
+    "    def preprocess(self):\n",
+    "        raise NotImplementedError()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DailyTrain(Train):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-253b92852de1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDailyTrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpreprocess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-10-b751c0ef0fe7>\u001b[0m in \u001b[0;36mpreprocess\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mTrain\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mpreprocess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "model = DailyTrain()\n",
+    "model.preprocess()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DailyTrain(Train):\n",
+    "    def preprocess(self):\n",
+    "        print('preprocess with multiprocessing by each product')\n",
+    "        \n",
+    "class WeeklyTrain(Train):\n",
+    "    def preprocess(self):\n",
+    "        print('preprocess with multiprocessing by each product')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "preprocess with multiprocessing by each product\n"
+    }
+   ],
+   "source": [
+    "model = DailyTrain()\n",
+    "model.preprocess()"
+   ]
   }
  ],
  "metadata": {
