--- a/ms/03_Sort.ipynb
+++ b/ms/03_Sort.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,11 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def main():\n",
+    "def main_1():\n",
     "    array = [1, 5, 2, 6, 3, 7, 4]\n",
     "    commands = [[2, 5, 3], [4, 4, 1], [1, 7, 3]]\n",
     "\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,62 @@
    ],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    main()"
+    "    main_1()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code description\n",
+    "# Author : minsik.lee\n",
+    "# FileName : 03_Sort.py\n",
+    "# Note \n",
+    "\t# @Summary : Sort 02. 가장 큰 수\n",
+    "\t# @version 1.0 : (2020-12-17) \n",
+    "    # @version 2.0 : (2020-12-18) case 0, 0, 0, 0\n",
+    "\n",
+    "def solution(numbers):\n",
+    "    answer = sorted(list(map(str, numbers)), key=lambda number_i:number_i*3, reverse=True)\n",
+    "    # # [(str(number_i) * 3) for number_i in numbers] # ['333', '303', '343', '555', '999']\n",
+    "\n",
+    "    # answer = ''.join(answer)\n",
+    "    answer = str(int(''.join(answer)))\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main_2():\n",
+    "    # numbers = [3, 30, 34, 5, 9]\n",
+    "    numbers = [0, 0, 0, 0]\n",
+    "\n",
+    "\n",
+    "    print(solution(numbers))     # return [5, 6, 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    main_2()"
    ]
   }
  ]
