--- a/ms/03_Sort.ipynb
+++ b/ms/03_Sort.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "def solution(numbers):\n",
     "    answer = sorted(list(map(str, numbers)), key=lambda number_i:number_i*3, reverse=True)\n",
-    "    # # [(str(number_i) * 3) for number_i in numbers] # ['333', '303', '343', '555', '999']\n",
+    "    # # [(str(number_i) * 3) for number_i in numbers] # ['333', '303030', '343434', '555', '999']\n",
     "\n",
     "    # answer = ''.join(answer)\n",
     "    answer = str(int(''.join(answer)))\n",
@@ -105,8 +105,8 @@
    "outputs": [],
    "source": [
     "def main_2():\n",
-    "    # numbers = [3, 30, 34, 5, 9]\n",
-    "    numbers = [0, 0, 0, 0]\n",
+    "    numbers = [3, 30, 34, 5, 9]\n",
+    "    # numbers = [0, 0, 0, 0]\n",
     "\n",
     "\n",
     "    print(solution(numbers))     # return [5, 6, 3]"
@@ -128,6 +128,229 @@
    "source": [
     "if __name__ == \"__main__\":\n",
     "    main_2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code description\n",
+    "# Author : minsik.lee\n",
+    "# FileName : 03_Sort.py\n",
+    "# Note \n",
+    "\t# @Summary : Sort 03. H-Index\n",
+    "\t# @version 1.0 : (2020-12-18) \n",
+    "\n",
+    "# # 홀수 케이스\n",
+    "\n",
+    "# [3, 0, 6, 1, 5] # n = 5\n",
+    "#      A = h, B < h\n",
+    "#     (A, B)\n",
+    "# 6 - (1, 4)\n",
+    "# 5 - (2, 3)\n",
+    "# 3 - (3, 2) V\n",
+    "# 1 - (4, 1)\n",
+    "# 0 - (5, 0)\n",
+    "\n",
+    "# # 짝수 케이스\n",
+    "# [3, 0, 6, 1, 5, 4] # n = 6\n",
+    "#      A = h, B < h\n",
+    "#     (A, B)\n",
+    "# 6 - (1, 5)\n",
+    "# 5 - (2, 4)\n",
+    "# 4 - (3, 4)\n",
+    "# 3 - (4, 2) V\n",
+    "# 1 - (5, 1)\n",
+    "# 0 - (6, 0)\n",
+    "\n",
+    "# # 차이가 큰 케이스\n",
+    "# [1000, 999, 888, 777, 666, 555, 3, 1] # n = 7\n",
+    "# 1000 - (1, 6)\n",
+    "# 999  - (2, 5)\n",
+    "# 888  - (3, 4)\n",
+    "# 777  - (4, 3) V\n",
+    "# 666  - (5, 2)\n",
+    "# 3    - (6, 1)\n",
+    "# 1    - (7, 1)\n",
+    "\n",
+    "# ## 동일 숫자 .. 짝수\n",
+    "# [3, 0, 6, 6, 6, 5] # = 6\n",
+    "\n",
+    "# 6 - (1, 3) ... (1, 5)\n",
+    "# 6 - (1, 3) ... (2, 4)\n",
+    "# 6 - (1, 3) ... (3, 3)\n",
+    "# 5 - (4, 2) V\n",
+    "# 3 - (3, 1)\n",
+    "# 0 - (6, 0)\n",
+    "\n",
+    "\n",
+    "def solution(citations):\n",
+    "    citations = sorted(citations, reverse=True)\n",
+    "    return citations[int(len(citations)/2)]\n",
+    "    # if len(citations) % 2 == 1: # odd\n",
+    "    #     return citations[int(len(citations)/2)]\n",
+    "    # else:\n",
+    "    #     return citations[int(len(citations)/2) + 1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "result -  666\n[1000, 999, 888, 777, 666, 555, 3, 1]\n0      4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "citations = [1000, 999, 888, 777, 666, 555, 3, 1] \n",
+    "print('result - ', solution(citations))\n",
+    "citations = sorted(citations, reverse=True)\n",
+    "print(citations)\n",
+    "print(len(citations) % 2, '    ', len(citations)/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[1, 0, 0, 0, 0, 0]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 43
+    }
+   ],
+   "source": [
+    "citations = [0, 0, 0, 0, 0, 1]\n",
+    "citations = sorted(citations, reverse=True)\n",
+    "citations\n",
+    "\n",
+    "     A = h, B < h\n",
+    "    (A, B)\n",
+    "1 - (1, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 30
+    }
+   ],
+   "source": [
+    "int(len(citations)/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 짝수 케이스\n",
+    "[3, 0, 6, 1, 5, 4] # n = 6\n",
+    "     A = h, B < h\n",
+    "    (A, B)\n",
+    "6 - (1, 5)\n",
+    "5 - (2, 4)\n",
+    "4 - (3, 3) V\n",
+    "3 - (4, 2) \n",
+    "1 - (5, 1)\n",
+    "0 - (6, 0)\n",
+    "\n",
+    "# 차이가 큰 케이스\n",
+    "[1000, 999, 888, 777, 666, 555, 3, 1] # n = 8\n",
+    "1000 - (1, 7)\n",
+    "999  - (2, 6)\n",
+    "888  - (3, 5)\n",
+    "777  - (4, 4) V\n",
+    "666  - (5, 2)\n",
+    "555  - (6, 2)\n",
+    "3    - (7, 1)\n",
+    "1    - (8, 0)\n",
+    "\n",
+    "## 동일 숫자 .. 짝수\n",
+    "[3, 0, 6, 6, 6, 5] # = 6\n",
+    "\n",
+    "6 - (1, 3) ... (1, 5)\n",
+    "6 - (1, 3) ... (2, 4)\n",
+    "6 - (1, 3) ... (3, 3)\n",
+    "5 - (4, 2) V\n",
+    "3 - (3, 1)\n",
+    "0 - (6, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "citations = [3, 0, 6, 1, 5] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "citations = sorted(citations, reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "citations = sorted(citations, reverse=True)\n",
+    "\n",
+    "if len(citations) % 2 == 1: # odd\n",
+    "    return citations[int(len(citations)/2)]\n",
+    "else:\n",
+    "    return citations[int(len(citations)/2) + 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "source": [
+    "citations[int(len(citations)/2)]"
    ]
   }
  ]
