--- a/sj/sort.ipynb
+++ b/sj/sort.ipynb
@@ -521,7 +521,7 @@
     "        else :\n",
     "            answer = 0\n",
     "        \n",
-    "    return answer\n"
+    "    return answer"
    ]
   },
   {
@@ -585,12 +585,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.3-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1608175141234",
-   "display_name": "Python 3.8.5 64-bit ('programmers_izik': conda)"
+   "name": "programmers_izik",
+   "display_name": "[programmers_izik]"
   }
  },
  "nbformat": 4,
