feat : minsiklee - programmer"

--- a/ms/03_Sort.ipynb
+++ b/ms/03_Sort.ipynb
@@ -95,7 +95,20 @@
     "\n",
     "    # answer = ''.join(answer)\n",
     "    answer = str(int(''.join(answer)))\n",
-    "    return answer"
+    "    return answer\n",
+    "\n",
+    "\n",
+    "# 테스트 1 〉\t통과 (812.31ms, 23.8MB)\n",
+    "# 테스트 2 〉\t통과 (230.27ms, 17.6MB)\n",
+    "# 테스트 3 〉\t통과 (1352.16ms, 28.1MB)\n",
+    "# 테스트 4 〉\t통과 (2.19ms, 10.4MB)\n",
+    "# 테스트 5 〉\t통과 (628.74ms, 22.3MB)\n",
+    "# 테스트 6 〉\t통과 (481.50ms, 20.7MB)\n",
+    "# 테스트 7 〉\t통과 (0.04ms, 10.3MB)\n",
+    "# 테스트 8 〉\t통과 (0.03ms, 10.3MB)\n",
+    "# 테스트 9 〉\t통과 (0.04ms, 10.4MB)\n",
+    "# 테스트 10 〉\t통과 (0.03ms, 10.3MB)\n",
+    "# 테스트 11 〉\t통과 (0.05ms, 10.3MB)\n"
    ]
   },
   {
@@ -244,6 +257,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[1, 0, 3, 1, 5]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 64
+    }
+   ],
+   "source": [
+    "citations = [3, 0, 6, 1, 5]\n",
+    "list(map(min, enumerate(citations, start=1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
@@ -259,7 +300,18 @@
     }
    ],
    "source": [
-    "int(len(citations)/2)"
+    "\n",
+    "def solution(citations):\n",
+    "\n",
+    "    for h in range(max(citations),0, -1) :\n",
+    "        n = [1 for _ in citations if _ >= h]\n",
+    "        if h <= len(n) :\n",
+    "            answer = h\n",
+    "            break\n",
+    "        else :\n",
+    "            answer = 0\n",
+    "        \n",
+    "    return answer\n"
    ]
   },
   {
